Update: env template

--- a/Backend/template.env
+++ b/Backend/template.env
@@ -1,4 +1,7 @@
 APP_LOG_NAME=apix
 APP_LOG_FILE_NAME=app.log
-APP_DATABASE_URL=
-FRONT_URL=
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=password
+POSTGRES_DB=dashlink
+APP_DATABASE_URL=postgresql://postgres:password@db:5432/dashlink
+FRONT_URL=http://dashboard:3000
