--- a/Telegrambot/template.env
+++ b/Telegrambot/template.env
@@ -1,5 +1,6 @@
 BOT_USERNAME=
 BOT_ACCESS_TOKEN=
-BOT_LOG_NAME=
+BOT_LOG_NAME=httpx
 BOT_LOG_FILE_NAME=bot.log
 BOT_OWNER=
+BACKEND_URL=http://backend:8000
